# M3DS-Model-Converter

./: .gitignore  CMakeLists.txt  Makefile
include/: BinaryFile.hpp  GLTF.hpp  HeapArray.hpp  Mod3DS.hpp  Wavefront.hpp  nlohmann-json.hpp
source/: Wavefront.cpp  main.cpp
